src: FileInfoAdapter: replace deprecated AsyncTask with Executor
Rerange some entries.